# rust-sql-playground

./: README.md
backend/: Cargo.toml  README.md  setup.sql
backend/src/: handlers.rs  main.rs  models.rs
frontend/: eslint.config.js
frontend/src/: App.css  App.tsx
