[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "mssql", "macros", "chrono"] }
tower-http = { version = "0.4", features = ["cors"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }